NetBSD build fix, based on patch by Mark Davies. thanks Mark =)

BUG:156200

svn path=/trunk/KDE/kdebase/workspace/; revision=765989